# kurimod

./: .gitignore  404.html  README.md  index.html  intro.html  pyproject.toml  reference.html  temp_inspect.py  test_base.py
assets/js/: 2e6450ac.6e01b854.js  7b5531bf.4ed5c07c.js  main.cb66593b.js  main.eb924bd5.js  runtime~main.48960dbb.js
examples/: dice.py  listener_deadlock_demo.py
getting-started/: configuration.html  examples.html  initialization.html  installation.html  intro.html
kurimod/: __init__.py
kurimod/helpers/: __init__.py
kurimod/listen/: __init__.py  callback_query_handler.py  client.py  dispatcher.py  message_handler.py
kurimod/nav/: __init__.py  pagination.py
kurimod/utils/: __init__.py  patch.py
reference/modules/: config.html  helpers.html
reference/modules/exceptions/: listener-stopped.html  listener-timeout.html
reference/modules/listen/: chat.html  client.html  message.html  user.html
reference/modules/nav/: pagination.html
reference/modules/types/: identifier.html  listener-types.html  listener.html
reference/modules/utils/: patch.html
release-notes/: v2-0-0.html  v2-1-0.html  v3-0-0.html  v3-1-0.html
