[project]
name = "kurimod"
version = "3.1.5"
description = "Kurimod: pyromod fork targeting the Kurigram (Pyrogram) client with conversation helpers"
authors = [
    { name = "Pauxis", email = "pauxiscezar@gmail.com" }
]
dependencies = [
    "kurigram >= 2.0.0"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
